[tool.poetry]
name = "yomi_bot"
version = "0.1.0"
description = "A set of bots to learn competitive card play"
authors = ["Arvid J. Kingl <akingl2016@gmail.com>"]
packages = [
    { include = "yomibot"},
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.1.2"
torch-geometric = "^2.6.1"
pytorch-lightning = "^2.5.0.post0"
pandas = "^2.2.3"
ternary = "^0.1"
matplotlib = "^3.10.1"
nashpy = "^0.0.41"
tensorboard = "^2.19.0"
tensorboardx = "^2.6.2.2"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 90
exclude = ["tests/", "*/__init__.py"]

[tool.ruff.lint]
unfixable = ["F401"]

[tool.ruff.format]
skip-magic-trailing-comma = false
exclude = ["tests/"]
